# Dofus-Multi-Helper

./: .eslintrc.json  README.md  package-lock.json  package.json
src/: App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/shortcuts/: commands.rs  handler.rs  mod.rs  models.rs  store.rs
src-tauri/src/windows/: api.rs  commands.rs  manager.rs  mod.rs  models.rs
src/assets/classes/: constants.ts
src/components/KeySettingInput/: index.tsx  types.ts
src/components/RingLoader/: index.tsx
src/components/ShortcutSettingInput/: index.tsx  types.ts
src/components/WindowItem/: index.tsx  types.ts
src/hook/useAlwaysOntop/: index.ts
src/hook/useShortcuts/: index.ts  types.ts
src/hook/useWindowSizeAdjuster/: index.ts
src/hook/useWindows/: index.ts
src/pages/Home/: index.tsx
src/pages/Home/components/Settings/: index.tsx  types.ts
src/pages/Home/components/WindowList/: index.tsx  types.ts
